[project]
name = "amap-sdk"
version = "0.1.0"
description = "Python SDK for the Amap (高德地图) Web Service REST API"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: tests that hit real Amap API (deselect with '-m not integration')"]
